Add base files.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "element-util",
   "version": "1.0.0",
   "description": "The helper library that provide convenience for using DOM Element and Nodelist.",
-  "main": "index.js",
+  "main": "dist/element-util.js",
+  "module": "dist/element-util.mod.js",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha --require babel-register"
+    "test": "node ./node_modules/mocha/bin/mocha --require babel-register",
+    "build": "node ./node_modules/webpack/bin/webpack --hide-modules",
+    "watch": "npm run build -- --watch"
   },
   "repository": {
     "type": "git",
@@ -26,13 +29,18 @@
   "homepage": "https://github.com/archco/element-util#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-dom": "^1.5.0",
-    "mocha": "^4.0.0"
+    "mocha": "^4.0.0",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.6.0"
   },
   "babel": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   }
 }
