--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,8 @@
 .gitattributes  text eol=lf
 .gitignore      text eol=lf
 LICENSE         text eol=lf
+
+# Don't diff or textually merge source maps
+*.map   binary
+
+test/*    linguist-vendored
