--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha --require babel-register",
+    "test": "echo \"Please see test/test.html in browser.\" && exit 1",
     "build": "node ./node_modules/webpack/bin/webpack --hide-modules",
     "watch": "npm run build -- --watch"
   },
