--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-util",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "The javascript library for using DOM Elements conveniently.",
   "main": "dist/element-util.js",
   "module": "dist/element-util.mod.js",
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "test": "echo \"Please see test/test.html in browser.\" && exit 1",
-    "build": "node ./node_modules/webpack/bin/webpack --hide-modules",
+    "build": "npx webpack --hide-modules",
     "watch": "npm run build -- --watch"
   },
   "repository": {
@@ -36,8 +36,8 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
-    "uglifyjs-webpack-plugin": "^1.0.1",
-    "webpack": "^3.8.1"
+    "uglifyjs-webpack-plugin": "^1.1.2",
+    "webpack": "^3.10.0"
   },
   "babel": {
     "presets": [
