--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "element-util",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "The javascript library for using DOM Elements conveniently.",
   "main": "dist/element-util.js",
   "module": "dist/element-util.mod.js",
   "directories": {
     "dist": "dist",
-    "docs": "docs",
+    "doc": "docs",
     "lib": "lib",
     "test": "test"
   },
