--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
   },
   "homepage": "https://github.com/archco/element-util#readme",
   "devDependencies": {
+    "awesome-typescript-loader": "^3.4.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
-    "mocha": "^4.0.1",
-    "uglifyjs-webpack-plugin": "^1.1.2",
-    "webpack": "^3.10.0"
+    "mocha": "^5.0.0",
+    "source-map-loader": "^0.2.3",
+    "typescript": "^2.6.2",
+    "uglifyjs-webpack-plugin": "^1.1.6",
+    "webpack": "^3.10.0",
+    "webpack-notifier": "^1.5.1"
   },
   "babel": {
     "presets": [
