--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.1.3",
   "description": "The javascript library for using DOM Elements conveniently.",
   "main": "dist/element-util.js",
-  "module": "dist/element-util.mod.js",
+  "types": "src/element-util.d.js",
   "directories": {
     "dist": "dist",
     "doc": "docs",
-    "lib": "lib",
     "test": "test"
   },
   "scripts": {
