--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.3",
   "description": "The javascript library for using DOM Elements conveniently.",
   "main": "dist/element-util.js",
-  "types": "types/element-util.d.js",
+  "types": "src/element-util.ts",
   "directories": {
     "dist": "dist",
     "doc": "docs",
