--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-util",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "The javascript library for using DOM Elements conveniently.",
   "main": "dist/element-util.js",
   "types": "src/element-util.ts",
@@ -28,12 +28,9 @@
     "url": "https://github.com/archco/element-util/issues"
   },
   "homepage": "https://github.com/archco/element-util#readme",
+  "dependencies": {},
   "devDependencies": {
     "awesome-typescript-loader": "^3.4.1",
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "mocha": "^5.0.0",
     "source-map-loader": "^0.2.3",
@@ -41,11 +38,5 @@
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
     "webpack-notifier": "^1.5.1"
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  },
-  "dependencies": {}
+  }
 }
