--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "echo \"Please see test/test.html in browser.\" && exit 1",
-    "build": "npx webpack --hide-modules",
+    "build": "webpack --hide-modules --mode=\"development\"",
     "watch": "npm run build -- --watch"
   },
   "repository": {
@@ -30,13 +30,17 @@
   "homepage": "https://github.com/archco/element-util#readme",
   "dependencies": {},
   "devDependencies": {
-    "awesome-typescript-loader": "^3.5.0",
+    "@types/jest": "^22.2.0",
     "chai": "^4.1.2",
-    "mocha": "^5.0.1",
+    "jest": "^22.4.2",
+    "mocha": "^5.0.4",
     "source-map-loader": "^0.2.3",
+    "ts-jest": "^22.4.1",
+    "ts-loader": "^4.0.1",
     "typescript": "^2.7.2",
-    "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "^3.11.0",
-    "webpack-notifier": "^1.5.1"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
+    "webpack-merge": "^4.1.2",
+    "webpack-notifier": "^1.6.0"
   }
 }
