--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Please see test/test.html in browser.\" && exit 1",
-    "build": "webpack --hide-modules --mode=\"development\"",
+    "test": "jest",
+    "build": "webpack --hide-modules",
     "watch": "npm run build -- --watch"
   },
   "repository": {
@@ -30,14 +30,31 @@
   "homepage": "https://github.com/archco/element-util#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^22.2.0",
     "chai": "^4.1.2",
+    "jest": "^22.4.2",
     "mocha": "^5.0.4",
     "source-map-loader": "^0.2.3",
+    "ts-jest": "^22.4.1",
     "ts-loader": "^4.0.1",
     "typescript": "^2.7.2",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
     "webpack-merge": "^4.1.2",
     "webpack-notifier": "^1.6.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
