--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,8 @@
     "module": "es2015",
     "moduleResolution": "node",
     "target": "es5",
-    "downlevelIteration": true,
     "noImplicitAny": true,
-    "sourceMap": true,
-    "lib": [
-      "dom",
-      "es5",
-      "scripthost",
-      "dom.iterable",
-      "es2015.iterable"
-    ]
+    "sourceMap": true
   },
   "include": [
     "src/**/*"
