Restore browser tests.
This browser tests is for the checking compatibility. The main testing tool is `ts-jest`.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "testPathIgnorePatterns": [
+      "<rootDir>/test/browser/",
+      "<rootDir>/node_modules/"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
