--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^23.1.2",
+    "babel-jest": "^23.4.2",
     "jest": "^23.2.0",
     "source-map-loader": "^0.2.3",
-    "ts-jest": "^22.4.6",
+    "ts-jest": "^23.1.3",
     "ts-loader": "^4.4.1",
-    "typescript": "^2.9.2",
+    "typescript": "^3.0.1",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
     "webpack-merge": "^4.1.3",
