--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-util",
-  "version": "1.6.4",
+  "version": "1.6.5",
   "description": "The utility library that provides convenience for using HTML Element.",
   "main": "dist/element-util.js",
   "types": "element-util.d.ts",
@@ -30,25 +30,25 @@
   "homepage": "https://github.com/archco/element-util#readme",
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^23.1.2",
-    "babel-jest": "^23.4.2",
-    "jest": "^23.2.0",
-    "source-map-loader": "^0.2.3",
-    "ts-jest": "^23.1.3",
-    "ts-loader": "^4.4.1",
-    "typescript": "^3.0.1",
-    "webpack": "^4.12.2",
-    "webpack-cli": "^3.0.8",
-    "webpack-merge": "^4.1.3",
-    "webpack-notifier": "^1.6.0"
+    "@types/jest": "^24.0.19",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "jest": "^24.9.0",
+    "source-map-loader": "^0.2.4",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.2.0",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-merge": "^4.2.2",
+    "webpack-notifier": "^1.8.0"
   },
   "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
+    "preset": "ts-jest",
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "testPathIgnorePatterns": [
-      "<rootDir>/test/browser/",
       "<rootDir>/node_modules/"
     ],
     "collectCoverage": true,
