--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-util",
-  "version": "1.6.8",
+  "version": "1.6.9",
   "description": "The utility library that provides convenience for using HTML Element.",
   "main": "dist/element-util.js",
   "types": "element-util.d.ts",
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "webpack --hide-modules",
+    "build": "webpack",
     "watch": "npm run build -- --watch"
   },
   "repository": {
@@ -28,22 +28,22 @@
     "url": "https://github.com/archco/element-util/issues"
   },
   "homepage": "https://github.com/archco/element-util#readme",
-  "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^24.0.24",
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.8.0",
-    "jest": "^24.9.0",
-    "source-map-loader": "^0.2.4",
-    "ts-jest": "^24.2.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.4",
-    "webpack": "^4.41.4",
-    "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2",
-    "webpack-notifier": "^1.8.0"
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "babel-jest": "^26.6.3",
+    "browserslist": "^4.16.6",
+    "eslint": "^7.26.0",
+    "jest": "^26.6.3",
+    "source-map-loader": "^2.0.1",
+    "ts-jest": "^26.5.6",
+    "ts-loader": "^9.1.2",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-merge": "^5.7.3",
+    "webpack-notifier": "^1.13.0"
   },
   "jest": {
     "preset": "ts-jest",
