--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "jest",
     "build": "webpack",
-    "watch": "npm run build -- --watch"
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -29,38 +29,29 @@
   },
   "homepage": "https://github.com/archco/element-util#readme",
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.23.0",
-    "@typescript-eslint/parser": "^4.23.0",
-    "babel-jest": "^26.6.3",
-    "browserslist": "^4.16.6",
-    "eslint": "^7.26.0",
-    "jest": "^26.6.3",
-    "source-map-loader": "^2.0.1",
-    "ts-jest": "^26.5.6",
-    "ts-loader": "^9.1.2",
-    "typescript": "^4.2.4",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-merge": "^5.7.3",
-    "webpack-notifier": "^1.13.0"
+    "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "babel-jest": "^27.5.1",
+    "browserslist": "^4.19.1",
+    "eslint": "^8.9.0",
+    "jest": "^27.5.1",
+    "source-map-loader": "^3.0.1",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0",
+    "webpack-notifier": "^1.15.0"
   },
   "jest": {
     "preset": "ts-jest",
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "testPathIgnorePatterns": [
-      "<rootDir>/node_modules/"
-    ],
+    "testEnvironment": "jsdom",
     "collectCoverage": true,
     "collectCoverageFrom": [
       "src/**/*.ts",
       "!src/element-util.ts"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "js",
-      "json",
-      "node"
     ]
   }
 }
