--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,8 @@
     ],
     "rules": {
       "no-unused-vars": "off",
-      "@typescript-eslint/no-var-requires": "off"
+      "@typescript-eslint/no-var-requires": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/no-inferrable-types": "off"
     }
 }
